  / ___| | | |  / \  | \ | |/ ___| ____| |   / _ \ / ___|                    
 | |   | |_| | / _ \ |  \| | |  _|  _| | |  | | | | |  _                     
 | |___|  _  |/ ___ \| |\  | |_| | |___| |__| |_| | |_| |                    
  \____|_| |_/_/   \_|_| \_|\____|_____|_____\___/ \____|                    
                                                          

################ 09 May 2019 ################
Changes:
1. Added Changelog for tracking changes between ReliabilityDriftProgram.exe versions
2. Added Raw Minimum, Raw Maximum, Raw Mean, Raw Standard Deviation Drift Calculations
3. Added Absolute Minimum, Absolute Maximum, Absolute Mean, Absolute Standard Deviation Drift Calculations
4. Amended bug where RTO Database Builder would generate blank rows
5. RTO Database Builder can now read cycle time from foldernames rather than just from filenames
6. Drift Calculations files will now save in a subfolder "Drift Calculation" inside the RTO folder for organization
7. Added file icon for program

Pending Features:
1. Drift Calculation Interactive Plot and Saved Plot functions
2. New GUI for pending feature (1)
3. Automatic SNX replacement
4. Automatic rescaling of numbers to avoid numbers protruding from plots
5. Parallel processing for Database Building

################ 16 May 2019 ################
Changes:
1. New GUI with buttons for new features
2. Interactive Plot for Drift Calculation
3. Saved Plot for Drift Calculation
4. Chinese Text in tooltip for additional guidance
5. Tooltip color changed from yellow to blue

Pending Features:
1. Automatic SNX replacement
2. Automatic rescaling of numbers to avoid numbers protruding from plots
3. Parallel processing for Database Building
4. Add HTOL1, HTOL2
5. Fix bugs with raw data interactive plot
6. Add HTOL1_ref, HTOL2_ref
7. Folder for database

################ 17 May 2019 ################
Changes:
1. Bugs squashed: